# yamldiff

./: LICENSE  LICENSE.md  README.md  pyproject.toml  setup.py  yamldiff.py
src/yamldiff/: __init__.py  dictdiff.py
src/yamldiff/scripts/: main.py
