[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "yamldiff"
authors = [{name = "Zahari Kassabov", email = "zaharid@protonmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "blessings",
    "ruamel.yaml"
]

[project.scripts]
yamldiff = "yamldiff.scripts.main:main"

[project.urls]
Home = "https://github.com/Zaharid/yamldiff"
